corrected app.js path to avoid docker bug when on launched on cloud on vm

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "mocha test/**/*.js",
-    "server": "node ./bin/app"
+    "server": "node bin/app"
   },
   "repository": {
     "type": "git",
