--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mocha": "^5.1.1",
     "mongoose": "^5.4.19",
     "request": "^2.88.0",
-    "swagger-ui-express": "^4.0.2"
+    "swagger-ui-express": "^4.0.2",
+    "lodash": ">=4.17.13"
   }
 }
